Add REST resources and endpoints for all the spork types
When writing the VestingStorageTest we were getting a 500 (internal
server error) response. This was caused by the package
org.unigrid.hedgehog.server.rest not being reachable by the jersey.server
module.